--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,19 +7,18 @@
 @tailwind utilities;
 
 :root {
-  --primary-color: #3CB4AC;
-  --secondary-color: #F98A8A;
-  --background-color: #FAF8F5;
-  --text-color: #3D3D3D;
-  --highlight-color: #E6C84E;
+  --primary-color: #3cb4ac;
+  --secondary-color: #f98a8a;
+  --background-color: #faf8f5;
+  --text-color: #3d3d3d;
+  --highlight-color: #e6c84e;
   --neutral-color: #727272;
-  --card-background: #F3F4F6; /* bg-gray-100 */
+  --card-background: #f3f4f6; /* bg-gray-100 */
 }
 
 body main {
   background-color: var(--background-color);
 }
-
 
 /* password field */
 /* Ensure the p-password container spans the full width */
